--- a/style.css
+++ b/style.css
@@ -72,6 +72,45 @@ main img {
   border-radius: 2rem;
 }
 
+hr {
+  background: rgb(103, 32, 216);
+  margin: 1rem 3rem;
+  height: 0.1rem;
+  border: none;
+}
+
+.second-section {
+  max-width: 90vw;
+  margin: auto;
+  height: 80vh;
+}
+
+.text-exp {
+  color: grey;
+  font-size: 1rem;
+}
+
+.exp {
+  font-size: 2rem;
+}
+
+.exp-timeline {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  width: 80%;
+  height: 0.1rem;
+  margin-top: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.exp-timeline-landmarks {
+  background-color: white;
+  width: 0.1rem;
+  height: 3rem;
+}
+
 /* utility */
 .name {
   color: var(--color-2);
