--- a/style.css
+++ b/style.css
@@ -54,6 +54,16 @@ ul li a {
   color: var(--color-2);
 }
 
+button{
+  background-color: rgb(103, 32, 216);
+  color:white;
+  font-size: 1.2rem;
+  padding: .6rem;
+  margin-top:2rem;
+  border-radius: .5rem;  
+  border: 1px solid white;
+}
+
 /* Main */
 .first-section {
   display: flex;
@@ -67,11 +77,6 @@ ul li a {
   border: var(--test-border);
 }
 
-main img {
-  height: 25rem;
-  border-radius: 2rem;
-}
-
 hr {
   background: rgb(103, 32, 216);
   margin: 1rem 3rem;
@@ -82,7 +87,7 @@ hr {
 .second-section {
   max-width: 90vw;
   margin: auto;
-  height: 80vh;
+  height: 70vh;
 }
 
 .text-exp {
@@ -94,24 +99,55 @@ hr {
   font-size: 2rem;
 }
 
-.exp-timeline {
+.exp-horizontal-line {
   display: flex;
   justify-content: space-between;
   background-color: white;
   width: 80%;
   height: 0.1rem;
-  margin-top: 5rem;
+  margin-top: 8rem;
   margin-left: auto;
   margin-right: auto;
 }
 
-.exp-timeline-landmarks {
+.exp-vertical-line {
   background-color: white;
   width: 0.1rem;
   height: 3rem;
 }
 
-/* utility */
+.exp-vertical-title{
+  font-size: 1.2rem;
+  position: relative;
+  top:0rem;
+  left:-2rem;
+  width: 8rem;   
+}
+
+.exp-vertical-Desc{
+  position: relative;
+  top:1rem;
+  left:-2rem;
+  width: 8rem;  
+  color: #b874f7;
+}
+
+.exp-logo{  
+  position: relative;
+  top: -5.4rem;
+  left:-6.2rem;
+  height: 5rem;
+  width: 12rem;        
+  text-align: left
+}
+
+.exp-logo img{  
+  object-fit: contain;
+  width: 100%; 
+  height: 100%; 
+  
+}
+
 .name {
   color: var(--color-2);
 }
